--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+        <!-- integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="assets/style.css" rel="stylesheet">
 
@@ -23,11 +23,11 @@
             <i class="material-icons">wb_sunny</i>&nbsp;Weather Dashboard</a>
     </nav>
 
-    <div class="container">
-        <div class="row mt-3">
-            <div class="col-md-3 searchbox">
+    <div class="container-fluid">
+        <div class="row">
+            <aside class="col-md-3 searchbox">
                 <h2 class="text-secondary">Search for a city: </h2>
-                <div class="input-group mb-3">
+                <div class="input-group form-group">
                     <input type="text" class="form-control" id="searchinput" type="search" aria-label="Search">
                     <div class="input-group-append">
                         <button class="btn btn-primary" id="searchbtn" type="submit">
@@ -38,7 +38,7 @@
                 <div class="mt-5" id="pastSearches">
                     <!-- Buttons for past searches here -->
                 </div>
-            </div>
+            </aside>
             <div class="col-md-9">
                 <div class="container" id="earthforecast">
                  </div>
@@ -47,17 +47,9 @@
     </div>
 
     <!--Script, jquery, bootstrap, moment links -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script> -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-
-
     <script src="assets/script.js"></script>
 </body>
 
