--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <!-- integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href="assets/style.css" rel="stylesheet">
 
@@ -35,7 +34,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="mt-5" id="pastSearches">
+                <div class="mt-5" id="prevSearches">
                     <!-- Buttons for past searches here -->
                 </div>
             </aside>
